# system-broadcaster

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: lib.rs  linux.rs  macos.rs
tests/: sys_notification_test.rs
