[package]
name = "system-broadcaster"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false }
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
libc = "0.2"
tokio = { version = "1", features = ["net"] }

[dev-dependencies]
env_logger = { version = "0.11", default-features = false , features = ["auto-color", "regex"] }
rand = { version = "0.9" }
tokio = { version = "1", features = ["full"] }

# Note: This must run without a test harness because, on macOS,
# we need access to the process' main thread.
[[test]]
name = "system_notifications_test"
path = "tests/sys_notification_test.rs"
harness = false